# solar-panel-seg

./: .gitignore  AGENTS.md  EXPERIMENTS.md  Makefile  README.md  data  pyproject.toml  request_interactive.sh
batch/: pm_submit_preempt_1GPU.sh  preempt_payload.sh  submit-gpu-shared.sh  submit_all.sh  submit_experiments.sh  submit_solar.sh
configs/: bdappv_only.yaml  combined.yaml  cross_provider.yaml  default.yaml
configs/data/: bdappv.yaml  bdappv_noflip.yaml  bdappv_scale_jitter.yaml  bradbury.yaml  combined.yaml
configs/experiment/: bdappv_only.yaml  combined.yaml  cross_provider.yaml
configs/model/: mask2former_swin_b.yaml  mask2former_swin_b_frozen.yaml  mask2former_swin_b_reweighted.yaml  mask2former_swin_l.yaml  mask2former_swin_t.yaml
configs/trainer/: base.yaml
mlruns/0/: meta.yaml
mlruns/292386938215403931/: meta.yaml
notebooks/: 01_eda.ipynb  02_results.ipynb
scripts/: download_bdappv.py  download_bradbury.py  process_bdappv.py  process_bradbury.py  visualize_bradbury_pipeline.py  visualize_multi_instance.py
slurm_logs/: solar-shared-55175504-submit-gpu-shared.sh.err  solar-shared-55175504-submit-gpu-shared.sh.out  solar-shared-55175505-submit-gpu-shared.sh.err  solar-shared-55175505-submit-gpu-shared.sh.out  solar-shared-55175509-submit-gpu-shared.sh.err  solar-shared-55175509-submit-gpu-shared.sh.out  solar-shared-55175516-submit-gpu-shared.sh.err  solar-shared-55175516-submit-gpu-shared.sh.out
src/solar_seg/: __init__.py  train.py
tests/: test_shapes.py
tests/test_acquisition/: test_gee_client.py  test_geo_utils.py  (+1 more)
(+42 files in other folders)
