[project]
name = "solar-panel-seg"
version = "0.1.0"
description = "Solar panel panoptic segmentation from satellite/aerial imagery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lightning>=2.2,<3.0",
  "torch>=2.2,<3.0",
  "torchvision>=0.17,<1.0",
  "numpy>=1.26,<3.0",
  "pyyaml>=6.0,<7.0",
  "transformers>=4.38,<5.0",
  "albumentations>=1.3,<2.0",
  "hydra-core>=1.3,<2.0",
  "mlflow>=2.10,<3.0",
  "opencv-python>=4.8,<5.0",
  "scikit-image>=0.22,<1.0",
  "matplotlib>=3.7,<4.0",
  "rasterio>=1.3,<2.0",
  "earthengine-api>=1.0,<2.0",
  "sentinelhub>=3.10,<4.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
  "dvc>=3.0,<4.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_cookbook", "src/solar_seg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
